styles.css
* {
    box-sizing: border-box;
}

:root {
    --box: #FFFFFF;
    --blue-white: #e0ebeb;
    --that-grey: #bbb;
    --green-pill: #2E6E5B;
    --pale-pill: #ECF4F1;
    --dark: #000000;
}

body {
    width: 90em;
    height: 217em;
    border: 1px;
    background-image: url("cd23f8b28866d711ecd55f7a1fe9e379146d9d6d.png");
    background-repeat: repeat;
    background-size: cover;
    font-family:Arial, Helvetica, sans-serif;
}

.Me {
    width: 144px;
    height: 144px;
    border-radius: 24px;
    margin-right: 2em;
}

.Introduction {
    display: flex;
    width: 82em;
    height: 19em;
    padding: 20px;
    margin: 30px;
    border-radius: 24px;
}

.intro {
    display: inline-block;
    text-align: start;
    border-radius: 1.8em;
    background-color: var(--box);
    border: 2px solid var(--box);
    padding-left: 1.5em;
}

 /* Proficiency Section */
.Proficiency {
    background-color: var(--box);
    width: 35em;
    height: 27em;
    gap: 0.6em;
    border-radius: 24px;
    margin-left: 20px;
    padding-left: 30px;
    padding-top: 30px;
}

.Proficiency > ul {
      list-style-type: none;
}

 /* Skills Section*/
.Skills {
    background-color: var(--box);
    width: 44em;
    height: 27em;
    border: 2px solid var(--box);
    padding: 20px;
    margin: 30px;
    border-radius: 24px;
}


 /* Skills List */
.list {
    background-color: var(--pale-pill);
    color: var(--dark);
    border: 2px solid var(--pale-pill);
    border-radius: 16px;
    margin: 0px;
    list-style-type: none;
    padding: 8px;
    width: 13em;
}

.pill {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 2em;
}
/* Projects Section */
.Projects {
    background-color: var(--box);
    color: var(--dark);
    width: 82em;
    height: 47em;
    border-radius: 24px;
}

.projected > * {flex: 1;}

.projected {
    display: flex;
    align-items: stretch;
    align-items: flex-end;
    margin-top: 70px;
}

.P {
    text-align: center;
    padding-top: 30px;
}

/* Portfolio */
.Portfolio {
    background-color: var(--green-pill);
    border: 2px solid var(--green-pill);
    color: var(--box);
    border-radius: 16px;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
    height: 80vh;
}

/* Podcast */
.Podcast {
    background-color: var(--pale-pill);
    border: 2px solid var(--pale-pill);
    border-radius: 16px;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
    height: 80vh;
}

/* Agile */
.Agile {
    background-color: var(--pale-pill);
    border: 2px solid var(--pale-pill);
    border-radius: 16px;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
    height: 80vh;
}

/* Super */
.Super {
    background-color: var(--pale-pill);
    border: 2px solid var(--pale-pill);
    border-radius: 16px;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
    height: 80vh;
}

 /* Education Section*/

.Education {
    width: 62em;
    height: 53em;
    color: var(--dark);
    background-color: var(--box);
    border-radius: 24px;
}

/* Education Blocks Section */
/* h2 for Education */
.ed {
    padding-top: 20px;
    padding-left: 20px;
    text-align: start;
}
/* Education Block One */
.Education-Block-One {
    background-color: var(--green-pill);
    border: 2px solid var(--green-pill);
    color: var(--box);
    border-radius: 16px;
    display: flex;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
}

.Education-Block-One-Left {
    display: inline-block;
}

.Education-Block-One-Right {
    display: inline-block;
}

/* Education Block Two*/
.Education-Block-Two {
    background-color: var(--pale-pill);
    border: 2px solid var(--pale-pill);
    border-radius: 16px;
    display: flex;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
}

.Education-Block-Two-Left {
    display: inline-block;
}

.Education-Block-Two-Right {
    display: inline-block;
}

/* Education Block Three*/
.Education-Block-Three {
    background-color: var(--pale-pill);
    border: 2px solid var(--pale-pill);
    border-radius: 16px;
    display: flex;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
}

.Education-Block-Three-Left {
    display: inline-block;
}

.Education-Block-Three-Right {
    display: inline-block;
}

/* Tools Section */
.Tools {
    width: 19em;
    height: 53em;
    border-radius: 24px;
    background-color: var(--box);
}

.tools-box {
    background-color: var(--pale-pill);
    border-radius: 8px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 2em;
}

.T {
    padding-top: 30px;
    text-align: center;
}

.tool-img {
    width: 5em;
    height: 5em;
    border-radius: 8px;
}

/* Experience Section */

.Experience {
    width: 82em;
    height: 40em;
    border-radius: 24px;
    background-color: var(--box);
}

/* Experience Blocks Section */
/* h2 for Experience */
.ex {
    padding-top: 20px;
    padding-left: 20px;
    text-align: start;
}

/* Experience Block One */
.Experience-Block-One {
    background-color: var(--green-pill);
    border: 2px solid var(--green-pill);
    color: var(--box);
    border-radius: 16px;
    display: flex;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
}

.Experience-Block-One-Left {
    display: inline-block;
}

.Experience-Block-One-Right {
    display: inline-block;
}

/* Experience Block Two */
.Experience-Block-Two {
    background-color: var(--pale-pill);
    border: 2px solid var(--pale-pill);
    border-radius: 16px;
    display: flex;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
}

.Experience-Block-Two-Left {
    display: inline-block;
}

.Experience-Block-Two-Right {
    display: inline-block;
}

/* Experience Block Three */
.Experience-Block-Three {
    background-color: var(--pale-pill);
    border: 2px solid var(--pale-pill);
    border-radius: 16px;
    display: flex;
    padding-left: 20px;
    margin-bottom: 0px;
    margin-left: 20px;
    margin-right: 20px;
}

.Experience-Block-Three-Left {
    display: inline-block;
}

.Experience-Block-Three-Right {
    display: inline-block;
}

/* Experience Button*/
/*
button > * .Experience-Block-One-Right > .Experience-Block-One > ul.Experience {
    background-color: #D76239;
    color: white;
    border: #D76239;
    border-radius: 8px;
}
    */
/* So far it's no longer working, ever since I made my Skills buttons. So I Inline Styled my Experience button on my HTML */

footer {
    background-color: #D76239;
    width: 83em;
    height: 10em;
    border-radius: 24px;
    text-align: start;
    display: inline-block;
    padding-left: 30px;
    padding-bottom: 5px;
}

.message {
    color: var(--box);
}

.Contact {
    display: flex;
    flex-direction: row;
}

h4 {
    background-color: var(--dark);
    color: var(--box);
    border-radius: 8px;
    text-align: center;
}

.vertical-line {
    border-left: 2px solid var(--that-grey);
    height: 20px;
    display: inline-flex;
    margin: 0 10px;
}

.vertical-line-two {
    border-left: 2px solid var(--dark);
    height: 20px;
    display: inline-flex;
    margin: 0 10px;
}

.Contact {
    color: var(--that-grey);
}

/* End of my styling and editing */

